--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,25 @@
 html, body {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+}
+
+body {
+  position: relative;
 }
 
 #map {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  margin: 0;
+}
+
+.search {
+  position: fixed;
+  padding: 1%;
+  z-index: 99;
+  top: auto;
+  right: 0;
+  border: solid black;
+  border-width: 1px;
+  background-color: #fffcf0;
 }
