--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,4 +22,12 @@ body {
   border: solid black;
   border-width: 1px;
   background-color: #fffcf0;
+  max-width: 12%;
+}
+
+.results {
+  position: fixed;
+  overflow-y: auto;
+  max-height: 100vh;
+  overflow-x: hidden;
 }
