--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,8 @@ html, body {
 }
 .search {
   position: fixed;
-  padding: 1% 0 1% 1%;
+  padding: 1%;
+  padding-bottom: 0;
   z-index: 99;
   top: auto;
   right: 0;
