--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,24 +1,33 @@
-html, body {
+html,
+body {
   height: 100vh;
   width: 100vw;
   margin: 0;
 }
+
+
 @media (max-width: 600px) {
-  .mobile {
+  .Mobile {
     display: none
   }
-  .search {
+  .Search {
     width: 50%;
   }
 }
-#map {
+
+
+main {
   height: 100vh;
   margin: 0;
 }
-#displaybutton {
+
+
+.DisplayButton {
   margin-bottom: 3px;
 }
-.search {
+
+
+.Search {
   position: fixed;
   padding: 1%;
   z-index: 99;
@@ -30,22 +39,32 @@ html, body {
   max-height: 25vh;
   width: 15%;
 }
-.results {
+
+
+.Results {
   position: fixed;
   overflow-y: auto;
   max-height: 80vh;
   overflow-x: hidden;
 }
-.infowindow {
+
+
+.InfoWindow {
   max-width: 20vw;
 }
-.topinfo {
+
+
+.TopInfo {
   padding: 0;
 }
-.snippet {
+
+
+.Snippet {
   border-top: 1px solid grey;
   padding-top: 5px;
 }
-.selected {
+
+
+.Selected {
   background-color: grey;
 }
