--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,6 +13,13 @@ form {
 }
 
 
+li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+
 @media (max-width: 600px) {
   .Mobile {
     display: none
@@ -39,7 +46,7 @@ main {
   padding: 1%;
   z-index: 99;
   top: auto;
-  right: 0;
+  left: 0;
   border: solid black;
   border-width: 1px;
   background-color: #fffcf0;
@@ -49,7 +56,6 @@ main {
 
 
 .Results {
-  position: fixed;
   overflow-y: auto;
   max-height: 80vh;
   overflow-x: hidden;
