--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,13 +13,6 @@ form {
 }
 
 
-li {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-
 @media (max-width: 600px) {
   .Mobile {
     display: none
@@ -46,7 +39,7 @@ main {
   padding: 1%;
   z-index: 99;
   top: auto;
-  left: 0;
+  right: 0;
   border: solid black;
   border-width: 1px;
   background-color: #fffcf0;
@@ -56,6 +49,7 @@ main {
 
 
 .Results {
+  position: fixed;
   overflow-y: auto;
   max-height: 80vh;
   overflow-x: hidden;
