play with styles

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,12 +46,11 @@ main {
   padding: 1%;
   z-index: 99;
   top: auto;
-  left: 0;
+  right: 0;
   border: solid black;
   border-width: 1px;
   background-color: #fffcf0;
-  max-height: 25vh;
-  width: 15%;
+  width: auto;
 }
 
 
@@ -59,6 +58,7 @@ main {
   overflow-y: auto;
   max-height: 80vh;
   overflow-x: hidden;
+  width: auto;
 }
 
 
